fix some field validations